[gd_scene load_steps=18 format=3 uid="uid://ci4ctuxa0kcam"]

[ext_resource type="Script" path="res://scripts/enemies/bill.gd" id="1_b1iby"]
[ext_resource type="Shader" path="res://scripts/palette.gdshader" id="1_bgepe"]
[ext_resource type="Texture2D" uid="uid://nh04xky1ply5" path="res://assets/bill/body.png" id="2_8a4kv"]
[ext_resource type="Texture2D" uid="uid://dm255tjxmlcpg" path="res://assets/bill/ripbozo.png" id="3_04qsj"]
[ext_resource type="Texture2D" uid="uid://c1vh6jlte6tke" path="res://assets/bill/white.png" id="3_a6jk5"]
[ext_resource type="Script" path="res://scripts/shaking.gd" id="3_ffoc4"]
[ext_resource type="Texture2D" uid="uid://iw3gng1bvsdx" path="res://assets/bill/eye.png" id="4_fxa6g"]
[ext_resource type="Texture2D" uid="uid://dlurr51yhm6iy" path="res://assets/bill/eyes.png" id="5_xff6l"]
[ext_resource type="Texture2D" uid="uid://bjrlnpsbgan0i" path="res://assets/bill/mouth.png" id="6_u5ndx"]
[ext_resource type="Texture2D" uid="uid://bhj1peag0p3g7" path="res://assets/bill/armor.png" id="7_6d0xd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vvcjx"]
shader = ExtResource("1_bgepe")
shader_parameter/grayscale_color = Color(1, 1, 1, 1)
shader_parameter/green_scale = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_o1mk0"]
atlas = ExtResource("5_xff6l")
region = Rect2(0, 0, 0, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_msi81"]
atlas = ExtResource("6_u5ndx")
region = Rect2(0, 0, 0, 122)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d0cnp"]
size = Vector2(768, 768)

[sub_resource type="Animation" id="Animation_2lwce"]
resource_name = "idle"
length = 2.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Mouth:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.378929, 2.14355),
"update": 0,
"values": [Vector2(0, 105), Vector2(-5, 97)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Eye:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-3, -1), Vector2(0, 0), Vector2(-3, -1)]
}

[sub_resource type="Animation" id="Animation_7rokt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Mouth:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 105)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Eye:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nhdom"]
_data = {
"RESET": SubResource("Animation_7rokt"),
"idle": SubResource("Animation_2lwce")
}

[node name="Bill" type="CharacterBody2D" groups=["enemies"]]
material = SubResource("ShaderMaterial_vvcjx")
script = ExtResource("1_b1iby")
death_texture = ExtResource("3_04qsj")

[node name="Sprites" type="Node2D" parent="."]
use_parent_material = true
script = ExtResource("3_ffoc4")

[node name="Body" type="Sprite2D" parent="Sprites"]
use_parent_material = true
texture = ExtResource("2_8a4kv")

[node name="Eye" type="Node2D" parent="Sprites"]
use_parent_material = true

[node name="White" type="Sprite2D" parent="Sprites/Eye"]
use_parent_material = true
position = Vector2(-0.204771, 10.9317)
texture = ExtResource("3_a6jk5")

[node name="Watch" type="Sprite2D" parent="Sprites/Eye"]
use_parent_material = true
texture = ExtResource("4_fxa6g")

[node name="Eye" type="Sprite2D" parent="Sprites/Eye"]
use_parent_material = true
texture = SubResource("AtlasTexture_o1mk0")

[node name="Mouth" type="Sprite2D" parent="Sprites"]
use_parent_material = true
position = Vector2(0, 105)
texture = SubResource("AtlasTexture_msi81")

[node name="Armor" type="Sprite2D" parent="Sprites"]
use_parent_material = true
texture = ExtResource("7_6d0xd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_d0cnp")

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="HeadAnimTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nhdom")
}

[connection signal="timeout" from="BlinkTimer" to="." method="_on_blink_timer_timeout"]
[connection signal="timeout" from="HeadAnimTimer" to="." method="_on_head_anim_timer_timeout"]
